[package]
name = "spl_swap"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_swap"

[features]
default = []
cpi = ["no-entrypoint"]
anchor-debug = []
no-entrypoint = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
fixed = "1.27.0"

